--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+body
+{
+    background-image: url("/assets/home_bg.jpg");
+    background-repeat: no repeat;
+    background-size: 100% 100%;
+    background-attachment: fixed;
+} 
