--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,13 +12,22 @@
           <a class="nav-link text-white" routerLink="home" routerLinkActive="active">Home</a>
         </li>
 
-        <li class="nav-item">
-          <a class="nav-link text-white" routerLink="login" routerLinkActive="active">Login</a>
+        <li class="nav-item" *ngIf="!us.userLoginStatus">
+          <a class="nav-link" routerLink="login"  routerLinkActive="active" id="login">Login</a>
+        </li>
+
+        <li class="nav-item" *ngIf="us.userLoginStatus">
+          <a class="nav-link" routerLink="login"  routerLinkActive="active" (click)="userLogout()" id="logout">Logout</a>
+        </li>
+
+        <li class="nav-item" *ngIf="!us.userLoginStatus">
+          <a class="nav-link text-white" routerLink="register" routerLinkActive="active">Register</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link text-white" routerLink="register" routerLinkActive="active">Register</a>
+          <a class="nav-link text-white" routerLink="users" routerLinkActive="active">Users</a>
         </li>
+
       </ul>
     </div>
   </div>
