--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -27,10 +27,10 @@
                         </label>
                       </div><br>
     
-                    <label for="un" class="form-label"><i class="fas fa-user-plus me-2"></i>Username</label>
-                    <input type="text" class="form-control" name="username" id="un" placeholder="Enter Username..." ngModel>
+                    <label for="un" class="form-label"><i class="fas fa-user-plus me-2 text-info"></i>Username</label>
+                    <input type="text" class="form-control" name="username" id="un" placeholder="Enter Username..." autocomplete="off" ngModel>
 
-                    <label for="password" class="form-label mt-3"><i class="fas fa-envelope me-2"></i>Passowrd</label>
+                    <label for="password" class="form-label mt-3"><i class="fas fa-lock text-warning me-2"></i>Passowrd</label>
                     <input type="password" class="form-control" name="password" id="password" placeholder="Enter Email..." ngModel>
 
                     <button type="submit" class="btn btn-success d-block mx-auto mt-5 mb-5"><i class="fas fa-plus-circle ms-0 me-1"></i>Login</button>
