--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,1 +1,19 @@
-<p>admin works!</p>
+<div class="container">
+    <ul class="nav nav-pills justify-content-evenly">
+  
+        <li class="nav-item mt-2">
+          <a class="nav-link" routerLink="addHospital" routerLinkActive="active" ><i class="fas fa-plus-circle me-2"></i>Add Hospital</a>
+        </li>
+  
+        <li class="nav-item mt-2">
+          <a class="nav-link" routerLink="viewHospitals"  routerLinkActive="active"><i class="fas fa-eye me-2"></i>View Hospitals</a>
+        </li>
+        
+    </ul>
+</div>
+  
+  
+    
+<router-outlet></router-outlet>
+  
+  
