--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,12 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><i class="fas fa-hospital-user me-1 ms-5 text-info"></i>
+    <a class="navbar-brand"><i class="fas fa-hospital-user me-1 ms-5 text-info"></i>
           Covid Hospital Management</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-
-        <li class="nav-item">
-          <a class="nav-link text-white" routerLink="home" routerLinkActive="active">Home</a>
-        </li>
 
         <li class="nav-item" *ngIf="!us.userLoginStatus">
           <a class="nav-link" routerLink="login"  routerLinkActive="active" id="login">Login</a>
@@ -24,9 +20,13 @@
           <a class="nav-link text-white" routerLink="register" routerLinkActive="active">Register</a>
         </li>
 
-        <li class="nav-item">
-          <a class="nav-link text-white" routerLink="users" routerLinkActive="active">Users</a>
+         <li class="nav-item" *ngIf="us.userLoginStatus">
+          <a class="nav-link text-white" routerLink="users" routerLinkActive="active">Queitionire</a>
         </li>
+
+        <!-- <li class="nav-item" *ngIf="us.userLoginStatus">
+          <a class="nav-link text-white" routerLink="hospitals" routerLinkActive="active">Hospitals</a>
+        </li> -->
 
       </ul>
     </div>
