--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,6 @@
-<h1>Page Not Found</h1>
+<!-- displaying 404 image and text if url is wrong -->
+<!-- It given in routing module as '**' -->
+<div class="container text-center">
+    <img src="/assets/pagenotfound.svg" width="30%" class="mt-4">
+    <h2 class="text-white mt-4 mb-5">Page Not Found</h2>
+</div>
