--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,6 +1,6 @@
 .maindiv
 {
-   background-image: url(/assets/login_bg.jpg);
+   background-image: url(/assets/login_bg.jpeg);
    background-size: 100% 100%;
    background-repeat: no-repeat;
    background-attachment: fixed;
