--- a/src/app/hospitals/hospitals.component.html
+++ b/src/app/hospitals/hospitals.component.html
@@ -11,7 +11,7 @@
                 <div class="card text-center mt-3 mb-3 animate__animated animate__flipInY">
                     <img src={{hospital.profileImage}} width="100%" height="200px" alt="">
                     <div class="card-body text-white">
-                        <div class="card-title mt-3" id="gameTitle"><h4>{{hospital.hospitalName}}</h4></div>
+                        <div class="card-title mt-3" id="hospitalTitle"><h4>{{hospital.hospitalName}} <h6></h6> <h5>({{hospital.hospitalPrice}} per day)</h5></h4></div>
                         <hr class="text-dark">
 
                         <!-- button for click event -->
