--- a/src/app/symptomsform/symptomsform.component.css
+++ b/src/app/symptomsform/symptomsform.component.css
@@ -10,11 +10,11 @@
 }
 .fa-sad-tear
 {
-    color: rgb(173, 173, 13);
+    color: yellow;
 }
 .fa-smile-beam
 {
-    color: rgb(173, 173, 13);
+    color: yellow;
 }
 #selectHead
 {
