--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -5,9 +5,9 @@
 <div class="container bg-white pb-5 text-center">
 
     
-    <h3 class="pt-5">Click here to see your virus status</h3><br>
+    <h3 class="pt-5">Click here to have a basic health checkup</h3><br>
         
-    <button class="btn btn-primary d-block mx-auto mb-4" (click)="onSelectYes(userObj.username)"><i class="fas fa-virus me-2"></i>Check Virus status</button>
+    <button class="btn btn-primary d-block mx-auto mb-4" (click)="onSelectYes(userObj.username)"><i class="fas fa-virus me-2"></i>Health Status</button>
     <hr>
         
 
